Salesforce_Iniciante/Teste/force-app/main/default/objects/Opportunity/fields/Project_Cost__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost__c</fullName>
    <description>Estimated project cost</description>
    <label>Project Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>