Salesforce_Iniciante/Teste/force-app/main/default/objects/Opportunity/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <description>Estimated project duration in days</description>
    <label>Project Duration</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>