Salesforce_Iniciante/Teste/force-app/main/default/objects/Opportunity/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Project start date</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>